k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kausal
  namespace: kausal
spec:
  selector:
    app: kausal
  ports:
    - name: http
      port: 8080
      targetPort: 8080
