k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kausal
  namespace: kausal
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kausal.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kausal
                port:
                  number: 8080
